--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -346,5 +346,5 @@
   <string name="msg_select_from_primary_storage">Select a directory from primary storage</string>
   <string name="err_authority_not_allowed">Authority \'%s\' not allowed</string>
   <string name="idepref_useIcu_title">Use ICU lib</string>
-  <string name="idepref_useIcu_summary">Use ICU library to use retrive word edges for double-tap and long-press selection.</string>
+  <string name="idepref_useIcu_summary">Use ICU library to use retrive word edges for double-tap and long-press word selection.</string>
 </resources>
