Added missing strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -348,4 +348,9 @@
   <string name="err_authority_not_allowed">Authority \'%s\' not allowed</string>
   <string name="idepref_useIcu_title">Use ICU lib</string>
   <string name="idepref_useIcu_summary">Use ICU library to use retrive word edges for double-tap and long-press word selection.</string>
+
+  <!--The text sorrounded with '@@' is spanned as clickable.-->
+  <!--There must be exactly two '@@' sorrounding the text that should be clickable.-->
+  <string name="msg_swipe_for_files">Swipe left for @@files@@.</string>
+  <string name="msg_swipe_for_output">Swipe up for @@build output@@.</string>
 </resources>
