--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -42,13 +42,13 @@
     <string name="view_diags">Diagnóstico</string>
 
     <!-- Build Tools Installation -->
-    <string name="title_installation_failed">Falha na instalação</string>
+    <string name="title_installation_failed">Instalação falhada</string>
     <string name="get_ready_for_something_awesome">Prepare-se para algo incrível!</string>
-    <string name="msg_picked_isnt_dir">O arquivo selecionado não é um diretório!</string>
+    <string name="msg_picked_isnt_dir">O arquivo escolhido não é um diretório!</string>
     <string name="msg_pick_single_file">Por favor, escolha apenas um diretório</string>
-    <string name="please_wait">Aguarde um momento…</string>
+    <string name="please_wait">Por favor aguarde um momento …</string>
     <string name="title_device_not_supported">Dispositivo não suportado</string>
-    <string name="msg_device_not_supported">Infelizmente, seu dispositivo não é compatível no momento.  Lamentamos o inconveniente.\n\nABIs de CPU compatíveis: aarch64 e armeabi-v7a</string>
+    <string name="msg_device_not_supported">Infelizmente, seu dispositivo não é compatível no momento. Lamentamos o inconveniente.\n\nABIs de CPU compatíveis: aarch64 e armeabi-v7a</string>
 
     <!-- Project Builder -->
     <string name="lint">Lint</string>
