Update Project Strings

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -84,16 +84,16 @@
     <string name="new_project">Novo projeto</string>
     <string name="package_name">Nome do pacote</string>
     <string name="project_app_name">Nome do aplicativo</string>
-    <string name="msg_create_new_project_greeting">Comece seu novo projeto incrível!</string>
+    <string name="msg_create_new_project_greeting">Comece seu novo projeto fantástico!</string>
     <string name="title_confirm_open_project">Abrir último projeto?</string>
-    <string name="msg_confirm_open_project">Você quer que eu abra o último projeto aberto?  O projeto aberto foi:\n%s</string>
+    <string name="msg_confirm_open_project">Você quer que eu abra o último projeto aberto? O projeto aberto foi:\n%s</string>
     <string name="group_project">Projeto</string>
     <string name="title_close_project">Fechar este projeto</string>
     <string name="msg_opened_project_does_not_exist">O último projeto aberto não existe!</string>
     <string name="msg_create_new_project">Criar novo projeto</string>
     <string name="msg_open_existing_project">Abrir projeto existente</string>
     <string name="title_confirm_project_close">Fechar projeto</string>
-    <string name="msg_confirm_project_close">Tem certeza de que deseja fechar este projeto?  Todos os daemons do Gradle iniciados serão interrompidos após o fechamento deste projeto.</string>
+    <string name="msg_confirm_project_close">Você tem certeza de que quer encerrar este projeto? Todos os daemons Gradle iniciados serão interrompidos após o encerramento deste projeto.</string>
     <string name="project_exists">Já existe um projeto com o mesmo nome!</string>
 
     <!-- Templates -->
